--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <form id="form-cep">
         <h1>Consulta de Endereço</h1>
-            <hr style="border-color: black;">
+            <hr style="border-color: black; border-width: 2px; ">
         <label for="cep">CEP:</label>
         <input type="text" id="cep" name="cep" />
         <br/>
