--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <form id="form-cep">
         <h1>Consulta de Endereço</h1>
-            <hr style="border-color: black; border-width: 2px; ">
-        <label for="cep">CEP:</label>
+        <hr style="border-color: black; border-width: 2px; ">
+        <label for="cep">CEP: Preencha para buscar os dados</label>
         <input type="text" id="cep" name="cep" />
         <br/>
         <label for="logradouro">Logradouro:</label>
