--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <br />
     <label for="estado">Estado:</label>
     <input type="text" id="estado" name="estado" readonly />
+    <a href="indexComBotao.html">Ir para versão com botao de Consultar</a>
     <p style="font-family: 'Brush Script MT', cursive; font-size: 18px;">By José Henrique</p>
   </form>
 
