--- a/indexComBotao.html
+++ b/indexComBotao.html
@@ -25,6 +25,7 @@
         <br />
         <label for="estado">Estado:</label>
         <input type="text" id="estado" name="estado" readonly />
+        <a href="index.html">Voltar versão sem botão Consultar</a>
         <p style="font-family: 'Brush Script MT', cursive; font-size: 18px;">By José Henrique</p>
     </form>
 
