--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <input type="text" id="estado" name="estado" readonly />
     <a href="indexComBotao.html">Ir para versão com botao de Consultar</a>
     <br />
-    <a href="https://jose-henrique-a.github.io/Blog-da-Evolucao-dos-Carros/index.html">Ir para o site Blog dos carros</a>
+    <a href="https://jose-henrique-a.github.io/Blog-da-Evolucao-dos-Carros/index.html">Ir para o site Blog dos carros</a><br>
+    <a href="https://josehenrique.pythonanywhere.com/">Ir para o site Personal Trainer Digital online</a>
     <p style="font-family: 'Brush Script MT', cursive; font-size: 18px;">By José Henrique</p>
   </form>
 
