--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body>
+<body style="background-image: url('fundo.png'); background-size: cover;">
   <form id="form-cep">
     <h1>Consulta de Endereço</h1>
     <hr style="border-color: black; border-width: 2px; ">
