--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="indexComBotao.html">Ir para versão com botao de Consultar</a>
     <br />
     <a href="https://jose-henrique-a.github.io/Blog-da-Evolucao-dos-Carros/index.html">Ir para o site Blog dos carros</a><br>
-    <a href="https://josehenrique.pythonanywhere.com/">Ir para o site Personal Trainer Digital online</a>
+    <a href="https://josehenrique.pythonanywhere.com/">Ir para o site Personal Trainer Digital online</a><br>
     <a href="https://jose-henrique-a.github.io/Preco-medio-dolar/">Ir para o site que calcula o preço médio dos seus investimentos em dólar</a>
     <p style="font-family: 'Brush Script MT', cursive; font-size: 18px;">By José Henrique</p>
   </form>
